# codeforge_hackathon

./: .gitignore  ARCHITECTURE.md  IMPLENTATION.md  MODULES.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  denoiser_testing.py  pyproject.toml
backend/: README.md  config.py  main.py  requirements.txt  schemas.py  setup_npu_models.py
backend/agents/: __init__.py  denoiser.py  intake_agent.py  logistics_agent.py  rag_triage_agent.py  retrieval_agent.py  vagueness_agent.py
backend/core/: __init__.py  dispatch_engine.py  escalation_scheduler.py  priority_queue.py  request_store.py
backend/data/: inventory.csv
backend/data/protocols/: README.md
backend/logs/: .gitkeep
backend/models/: .gitkeep
backend/routers/: approve.py  inventory.py  pipeline.py  queue.py  settings.py  volunteer_return.py  volunteers.py
backend/temp/: .gitkeep
backend/tests/: denoiser_testing_old.py  test_denoiser.py  test_live_all.py  test_rag_pipeline.py  test_rag_triage_token_budget.py
backend/utils/: __init__.py  audio_utils.py  inventory_manager.py  logger.py
frontend/: README.md  app.js  index.html  package-lock.json  package.json  styles.css  styles.css.orig  styles.css.patch  styles.css.rej
frontend/electron/: main.js  preload.js
